--- a/requirements.txt
+++ b/requirements.txt
@@ -10,9 +10,9 @@ idna==3.11
 itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.3
-mysqlclient==2.2.7
+pyserial==3.5
+requests==2.32.3
 SQLAlchemy==2.0.44
 typing_extensions==4.15.0
 Werkzeug==3.1.3
 WTForms==3.2.1
-pymysql==1.1.0
